--- a/src/assets/scss/markdown.scss
+++ b/src/assets/scss/markdown.scss
@@ -642,6 +642,10 @@
   margin-bottom: 16px;
 }
 
+.markdown-body pre {
+  margin-bottom: 0;
+}
+
 .markdown-body hr {
   height: 0.25em;
   padding: 0;
